--- a/src/partials/_navbar.scss
+++ b/src/partials/_navbar.scss
@@ -14,6 +14,10 @@ $navbar-item-spacing:                            $global-navbar-item-spacing !de
   min-height: $navbar-min-height;
   justify-content: flex-start;
   align-items: center;
+  @media (max-width: $breakpoint-sm) {
+    justify-content: center;
+    background: red;
+  }
 
   .navbar-item {
     flex-basis: 5%;
