--- a/src/partials/_variables.scss
+++ b/src/partials/_variables.scss
@@ -15,8 +15,8 @@ $flash-breakpooint-sm:                                       720px !default;;
 /*
   *  Breakponts
  */
-
+$breakpoint-xs:                              480px !default;
 $breakpoint-sm:                              720px !default;
-$breakpoint-md:                             960px !default;
+$breakpoint-md:                              960px !default;
 $breakpoint-lg:                              1200px !default;
-$breakpoint-xl:                             1600px !default;
+$breakpoint-xl:                              1600px !default;
